--- a/app/views/competitions/_table_head.html.erb
+++ b/app/views/competitions/_table_head.html.erb
@@ -1,5 +1,4 @@
-<th>Namn</th>
-<th>Kommentar</th>
-<th>Länk</th>
-<th>Datum</th>
-<th>Eventor länk</th>
+<th><%= sortable "name","Namn" %></th>
+<th><%= sortable "comment","Kommentar" %></th>
+<th><%= sortable "url","Klubbens tävlingslänk" %></th>
+<th><%= sortable "date","Datum" %></th>
