--- a/app/views/inherited_resources/_table_row_links.html.erb
+++ b/app/views/inherited_resources/_table_row_links.html.erb
@@ -1,3 +1,6 @@
-<td><%= link_to "Visa", table_row_links %></td>
-<td><%= link_to "Ändra", edit_polymorphic_path(table_row_links) %></td>
-<td><%= link_to "Ta bort", table_row_links, :confirm => 'Är du säker?', :method => :delete %></td>
+<td>
+  <%= link_to raw('<span class="ui-icon ui-icon-wrench"></span>'), edit_polymorphic_path(table_row_links), :class => :link %>
+</td>
+<td>
+  <%= link_to raw('<span class="ui-icon ui-icon-trash"></span>'), table_row_links,:class => :link, :confirm => 'Är du säker?', :method => :delete %>
+</td>
