--- a/app/views/klasses/_table_head.html.erb
+++ b/app/views/klasses/_table_head.html.erb
@@ -1,3 +1,3 @@
-<th>Kortnamn</th>
-<th>Namn</th>
-<th>Huvudklass?</th>
+<th><%= sortable "short_name", 'Kortnamn' %></th>
+<th><%= sortable "name", 'Namn' %></th>
+<th><%= sortable "main_class", 'Huvudklass?' %></th>
