--- a/app/views/people/_table_head.html.erb
+++ b/app/views/people/_table_head.html.erb
@@ -1,2 +1,2 @@
-<th>Namn</th>
-<th>Födelsedatum</th>
+<th><%= sortable 'surname,name','Namn'%> </th>
+<th><%= sortable 'birthdate','Födelsedatum'%> </th>
