--- a/app/views/inherited_resources/_form.html.erb
+++ b/app/views/inherited_resources/_form.html.erb
@@ -1,17 +1,13 @@
-<%= simple_form_for(resource) do |f| %>
+<%= form_for resource, :validations => true do |f| %>
   <% if resource.errors.any? %>
-    <h2><%= pluralize(resource.errors.count, "error") %> prohibited this testa from being saved:</h2>
+    <h3><%= resource.errors.count %> fel förhindrade <%= resource.class.human_name.downcase %>  från att sparas:</h3>
     <ul>
       <% resource.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </ul>
   <% end %>
-  <% resource.attributes.delete_if do |k,v| ["created_at","updated_at","id"].index(k) end.each do |a| %>
-    <p>
-      <%= f.input a[0].to_sym %>
-    </p>
-  <% end %>
+  <%= render :partial => 'inputs', :object => f %>
   <br />
   <%= f.submit %>
 <% end %>
