--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,12 +1,3 @@
-<p>
-  <% @persons.each do |p| %>
-    
-    <%= p[:name] %>:  <%= p[:sum] %>
-    <br />
-    
-  <% end %>
-</p>
-
 <script type="text/javascript">
 var chart;
 $(document).ready(function() {
@@ -18,20 +9,19 @@ $(document).ready(function() {
          marginBottom: 25
       },
       title: {
-         text: 'Monthly Average Temperature',
+         text: 'Framsteg under säsong',
          x: -20 //center
       },
       subtitle: {
-         text: 'Source: WorldClimate.com',
+         text: '',
          x: -20
       },
       xAxis: {
-         categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-            'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
+         //categories: <%= raw @competitions.map(&:name).to_json %>
       },
       yAxis: {
          title: {
-            text: 'Temperature (Â°C)'
+            text: 'Poäng'
          },
          plotLines: [{
             value: 0,
@@ -42,18 +32,18 @@ $(document).ready(function() {
       tooltip: {
          formatter: function() {
                    return '<b>'+ this.series.name +'</b><br/>'+
-               this.x +': '+ this.y +'Â°C';
+               this.y ;
          }
       },
       legend: {
          layout: 'vertical',
          align: 'right',
          verticalAlign: 'top',
-         x: -10,
-         y: 100,
-         borderWidth: 0
+         x: 0,
+         y: 30,
+         borderWidth: 0 
       },
-      series: <%= raw @persons.to_json %>
+      series: <%= raw @report.to_json %>
 
         /*[{
          name: 'Tokyo',
