Don't use cdn for javascript, meta_search etc

--- a/app/views/inherited_resources/_form.html.erb
+++ b/app/views/inherited_resources/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for resource, :validations => true do |f| %>
+<%= form_for resource, :validations => true, :class => "model" do |f| %>
   <% if resource.errors.any? %>
     <h3><%= resource.errors.count %> fel förhindrade <%= resource.class.human_name.downcase %>  från att sparas:</h3>
     <ul>
