--- a/app/views/people/_table_head.html.erb
+++ b/app/views/people/_table_head.html.erb
@@ -1,2 +1,2 @@
-<th><%= sortable 'surname,name','Namn'%> </th>
-<th><%= sortable 'birthdate','Födelsedatum'%> </th>
+<th><%= sort_link @search, :surname %> </th>
+<th><%= sort_link @search, :birthdate %> </th>
