--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
   <head>
     <title><%= yield(:title) || "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
-    <%= stylesheet_link_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.1/themes/start/jquery-ui.css",%>
+    <%= stylesheet_link_tag "jquery-ui-1.8.5.custom",%>
     <%= javascript_include_tag "jquery-1.4.2.min",
-      "jquery-ui-1.8.4.custom.min",
+      "jquery-ui-1.8.5.custom.min",
       'jquery.ui.datepicker-sv',
       'rails',
       'highcharts.src.js' ,
