--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= yield(:title) || "Untitled" %></title>
     <%= stylesheet_link_tag "application" %>
-    <%= stylesheet_link_tag "jquery-ui-1.8.5.custom",%>
+    <%= stylesheet_link_tag "jquery-ui-1.8.5.custom"%>
     <%= javascript_include_tag "jquery-1.4.2.min",
       "jquery-ui-1.8.5.custom.min",
       'jquery.ui.datepicker-sv',
