--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,8 +1,69 @@
 <script type="text/javascript">
-   var data = <%= raw @report.to_json %>;
+var chart;
+$(document).ready(function() {
+   chart = new Highcharts.Chart({
+      chart: {
+         renderTo: 'result',
+         defaultSeriesType: 'line',
+         marginRight: 130,
+         marginBottom: 25
+      },
+      title: {
+         text: 'Framsteg under säsong',
+         x: -20 //center
+      },
+      subtitle: {
+         text: '',
+         x: -20
+      },
+      xAxis: {
+         //categories: <%= raw @competitions.map(&:name).to_json %>
+      },
+      yAxis: {
+         title: {
+            text: 'Poäng'
+         },
+         plotLines: [{
+            value: 0,
+            width: 1,
+            color: '#808080'
+         }]
+      },
+      tooltip: {
+         formatter: function() {
+                   return '<b>'+ this.series.name +'</b><br/>'+
+               this.y ;
+         }
+      },
+      legend: {
+         layout: 'vertical',
+         align: 'right',
+         verticalAlign: 'top',
+         x: 0,
+         y: 30,
+         borderWidth: 0 
+      },
+      series: <%= raw @report.to_json %>
+
+        /*[{
+         name: 'Tokyo',
+         data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+      }, {
+         name: 'New York',
+         data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
+      }, {
+         name: 'Berlin',
+         data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
+      }, {
+         name: 'London',
+         data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+      }]
+      */
+   });
+
+
+});
+
 </script>
-<%= javascript_include_tag 'report'  %>
-<div>
-  Från:<%= text_field_tag :start_date, @start_date %> Till: <%= text_field_tag :end_date,  @end_date %>
-  <div id="result"></div>
-</div>
+<div id="result"></div>
+
