A lot of changes, incomplete sorts though

--- a/app/views/competitions/_table_row.html.erb
+++ b/app/views/competitions/_table_row.html.erb
@@ -1,5 +1,5 @@
 <% r = table_row %>
-<td><%= link_to r.name,r.eventor_url, :target => "_blank" %></td>
+<td><%= link_to r.name,r %></td>
 <td><%= r.comment %></td>
 <td><%= link_to r.url,r.url, :target => "_blank" %></td>
 <td><%= r.date %></td>
