--- a/app/views/results/_table_row.html.erb
+++ b/app/views/results/_table_row.html.erb
@@ -3,6 +3,7 @@
 
 <td><%= link_to r.person.full_name,r.person %></td>
 <td><%= link_to r.competition.name,r.competition %></td>
+<td><%= r.competition.date %></td>
 <td><%= link_to r.klass.short_name,r.klass %></td>
 <td><%= r.position %></td>
 <td><%= r.time_string %></td>
