--- a/app/views/people/_table_head_filter.html.erb
+++ b/app/views/people/_table_head_filter.html.erb
@@ -1,2 +1,2 @@
-<th><%= f.text_field :name_contains %></th>
-<th><%= f.text_field :birthdate_equals %></th>
+<th><%= f.text_field :name_or_surname_contains %></th>
+<th><%= f.text_field :birthdate_greater_than %></th>
