--- a/app/views/competitions/_table_row.html.erb
+++ b/app/views/competitions/_table_row.html.erb
@@ -1,7 +1,7 @@
 <% r = table_row %>
 <td><%= link_to r.name,r %></td>
 <td><%= r.comment %></td>
-<td><%= link_to r.url,r.url, :target => "_blank" %></td>
+<td><%= r.url ? link_to(r.url,r.url, :target => "_blank") : "" %></td>
 <td><%= r.date %></td>
 
 
