--- a/app/views/klasses/_table_head.html.erb
+++ b/app/views/klasses/_table_head.html.erb
@@ -1,3 +1,3 @@
-<th><%= sortable "short_name", 'Kortnamn' %></th>
-<th><%= sortable "name", 'Namn' %></th>
-<th><%= sortable "main_class", 'Huvudklass?' %></th>
+<th><%= sort_link @search, :short_name,'Kortnamn'  %> </th>
+<th><%= sort_link @search, :name,'Namn'  %> </th>
+<th><%= sort_link @search, :main_class,'Huvudklass?'  %> </th>
