--- a/app/views/reports/_row.html.erb
+++ b/app/views/reports/_row.html.erb
@@ -1,8 +1,11 @@
 <tr>
   <td>
+    <%= row_counter + 1%>
+  </td>
+  <td>
     <%= row[:name] %>
   </td>
   <td>
-    <%= row[:data].last %>
+    <%= row[:data].last ?  row[:data].last : 0 %>
   </td>
 </tr>
