--- a/app/views/results/_table_head.html.erb
+++ b/app/views/results/_table_head.html.erb
@@ -1,11 +1,10 @@
 
 <th><%= sort_link @search, :person_name, "Namn" %></th>
 <th><%= sort_link @search, :competition_name, "Tävling" %></th>
-
-<th><%= sortable "competitions.date", "Datum" %></th>
-<th><%= sortable "klasses.name", 'Klass'%></th>
-<th><%= sortable "position", 'Placering'%></th>
-<th><%= sortable "time", 'Tid - vinnartid'%></th>
+<th><%= sort_link @search, :competition_date, "Datum" %></th>
+<th><%= sort_link @search, :klass_name, "Klass" %></th>
+<th><%= sort_link @search, :position, "Placering" %></th>
+<th>Tid - vinnartid</th>
 <th>Poäng</th>
-<th><%= sortable "created_at", 'Skapad' %></th>
-<th><%= sortable "updated_at", 'Uppdaterad' %></th>
+<th><%= sort_link @search, :created_at, "Skapad" %></th>
+<th><%= sort_link @search, :updated_at, "Uppdaterad" %></th>
