--- a/app/views/results/_table_head_filter.html.erb
+++ b/app/views/results/_table_head_filter.html.erb
@@ -1,8 +1,10 @@
-<th><%= f.text_field :person_name_contains %></th>
+<th><%= f.text_field :person_name_or_person_surname_contains %></th>
 <th><%= f.text_field :competition_name_contains %></th>
-<th><%= f.text_field :klass_short_name_contains %></th>
+<th><%= f.text_field :competition_date_greater_than %></th>
+<th><%= f.text_field :klass_short_name_starts_with %></th>
 <th><%= f.text_field :position_less_than %></th>
 <th></th>
 <th></th>
-<th><%= f.text_field :created_at_equals %> </th>
+<th><%= f.text_field :updated_at_greater_than %> </th>
+<th><%= f.text_field :created_at_greater_than %> </th>
 <th></th>
